src/index.css
@font-face {
  font-family: "JetBrains";
  src: url("/fonts/JetBrainsMono-Medium.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Montserrat";
  src: url("/fonts/Montserrat-Medium.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Montserrat";
  src: url("/fonts/Montserrat-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Montserrat";
  src: url("/fonts/Montserrat-BoldItalic.ttf") format("truetype");
  font-weight: bold;
  font-style: italic;
}
@font-face {
  font-family: "Montserrat";
  src: url("/fonts/Montserrat-MediumItalic.ttf") format("truetype");
  font-weight: normal;
  font-style: italic;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  color: #fff;
}

img {
  -webkit-user-drag: none;
}

html {
  background: #151515;
  overflow-x: hidden;
}

.drag-place {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-app-region: drag;
  width: 100%;
  height: 35px;
}

.container {
  padding: 30px;
  max-width: 600px;
  margin: auto;
}

.topbar-container {
  display: flex;
  align-items: start;
  justify-content: space-between;
  max-width: 600px;
}

.topbar-wrapper {
  display: flex;
  align-items: center;
  gap: 5px;
  height: 70px;
  user-select: none;
  font-family: JetBrains;
}

.topbar-wrapper .day {
  font-size: 70px;
}

.topbar-wrapper .months-names {
  display: flex;
  flex-direction: column;
  margin-top: 5px;
}

.settings-button {
  background: transparent;
  border: none;
  outline: none;
  height: 30px;
  width: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0.3;
  cursor: pointer;
}

.months-names p {
  font-size: 20px;
  margin-bottom: -5px;
}

.showcase-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.showcase-title {
  opacity: 50%;
  display: flex;
  align-items: center;
  gap: 3px;
}

.new-button {
  background: transparent;
  padding: 3px 10px;
  cursor: pointer;
  border: none;
  outline: none;
}

.showcase-wrapper {
  padding: 10px;
  max-height: 250px;
  overflow-y: auto;
}

.showcase-title .title {
  font-family: JetBrains;
}

.note-link {
  display: flex;
  align-items: center;
  gap: 15px;
  padding: 5px 10px;
  border-radius: 5px;
  cursor: pointer;
}

.note-link-title {
  display: flex;
  align-items: center;
  width: 100%;
  justify-content: space-between;
}

.note-link:hover {
  background-color: #ffffff09;
}

.note-link img {
  opacity: 80%;
}

.note-link h3 {
  font-family: Montserrat;
  font-weight: normal;
  padding-bottom: 1px;
}

.note-link.add {
  padding: 10px;
  opacity: 50%;
}

.mdx-wrapper {
  display: none;
  opacity: 0;
  height: 465px;
  transition: all 200ms ease;
  cursor: text;
  margin-top: -15px;
}

.mdx-editor {
  height: 465px;
}

.mdx-editor,
.mdx-editor > * {
  border: none;
  outline: none;
  caret-color: #fff;
  font-family: Montserrat;
  font-weight: normal;
}

.mdx-editor blockquote {
  padding: 5px 15px;
  border-left: 2px solid #fff;
  background: #ffffff11;
  margin: 5px 0;
}

.mdx-editor p a span,
.mdx-editor p a {
  color: #00a2ff;
}

.mdx-editor h2:has(code),
.mdx-editor h3:has(code),
.mdx-editor h4:has(code),
.mdx-editor h5:has(code),
.mdx-editor h6:has(code) {
  margin: 1px 0;
}

.mdx-editor code {
  font-family: JetBrains;
}

.mdx-editor code span {
  border-radius: 4px;
  background: transparent !important;
  border: 1px solid #ffffff30;
}

._linkDialogPopoverContent_uazmk_600 {
  background: #181818 !important;
  border: 1px solid #ffffff10 !important;
  padding: 3px 10px !important;
}

._linkDialogPopoverContent_uazmk_600 button:hover {
  background: #191919 !important;
  cursor: pointer;
}

._linkDialogPopoverContent_uazmk_600 input {
  background: transparent !important;
  border: 1px solid #ffffff11;
}

._linkDialogPopoverContent_uazmk_600 form button {
  background: #ffffff08 !important;
  border: none;
}

._linkDialogPopoverContent_uazmk_600 form button:hover {
  background: #ffffff15 !important;
}

._listItemUnchecked_1tncs_74::before {
  border-radius: 4px !important;
}

._listItemChecked_1tncs_73::before {
  border-radius: 4px !important;
  background-color: white !important;
  border: none !important;
  height: 18px !important;
  width: 18px !important;
}

._listItemChecked_1tncs_73::after {
  top: 3px !important;
  border-width: 0 1.5px 1.5px 0 !important;
  border-color: black !important;
}

._listItemUnchecked_1tncs_74:focus::before,
._listItemChecked_1tncs_73:focus::before {
  box-shadow: none !important;
  border-radius: 4px !important;
}

.folder-links-wrapper {
  position: absolute;
  top: 93%;
  left: 20px;
  display: flex;
  align-items: center;
  width: 540px;
}

.folder-links-wrapper h4 {
  font-family: JetBrains;
}

.folder-link {
  display: flex;
  align-items: center;
  gap: 5px;
  opacity: 30%;
  padding: 2px 10px;
  background: transparent;
  border: none;
  outline: none;
  cursor: pointer;
  transition: opacity 300ms ease;
}

.folder-link.active {
  opacity: 50%;
}

.add-folder {
  background: transparent;
  border: none;
  outline: none;
  display: grid;
  place-items: center;
  cursor: pointer;
}

.bottom-bar {
  transition: all 200ms ease;
}

.settings-container {
  position: absolute;
  top: 15px;
  background: #11111170;
  border: 1px solid #ffffff08;
  height: 570px;
  width: 400px;
  padding: 20px 25px;
  border-radius: 10px;
  backdrop-filter: blur(20px);
  transition: 400ms left ease;
  z-index: 10;
  font-family: Montserrat;
  font-weight: normal;
}

.titlebar {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.titlebar h2,
.settings-item h4 {
  font-weight: normal;
}

.titlebar img {
  rotate: 45deg;
}

.titlebar .close-btn {
  background: transparent;
  height: 30px;
  width: 30px;
  display: grid;
  place-items: center;
  border: none;
  outline: none;
  cursor: pointer;
  opacity: 0.4;
}

.settings-items {
  padding: 20px 0;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.settings-item {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.settings-field {
  width: 100%;
  max-width: 400px;
  padding: 10px 14px;
  font-size: 14px;
  background: transparent;
  border: 1px solid #444;
  border-radius: 8px;
  outline: none;
  transition: all 0.3s ease;
  resize: none;
}

textarea.settings-field {
  height: 75px;
}

.settings-field:focus {
  border-color: #ffffff80;
}

.settings-field::placeholder {
  color: #ffffff80;
}

